fixing grid layout issue

--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ html, body {
 #grid-layout{
 	display: grid;
 	grid-gap: 6px;
-	grid-column: 1fr 1fr 1fr 1fr;
-	grid-row: 60px 1fr 1fr 1fr 1fr 30px;	
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 60px 1fr 1fr 1fr 1fr 30px;	
 	width: 100vw;
     height: 100vh;
     grid-template-areas:
